infra/payment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: payment-auth
          image: payment-project/auth
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: payment-auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3002
      targetPort: 3002
