infra/payment-ticket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: payment-ticket
          image: payment-project/ticket
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: payment-ticket-srv
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 3003
      targetPort: 3003
