infra/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress-service
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: payment-auth-srv
                port:
                  number: 3002
          - path: /ticket
            pathType: Prefix
            backend:
              service:
                name: payment-ticket-srv
                port:
                  number: 3003
